--- a/solucionInventarios/ClientApp/public/index.html
+++ b/solucionInventarios/ClientApp/public/index.html
@@ -23,12 +23,12 @@
     <title>NuCore Music Shop</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root" background ="/img/backgroundPro.png"></div>
-
-    <!--
+      <noscript>
+          You need to enable JavaScript to run this app.
+      </noscript>
+      <div id="root" background="https://i.ibb.co/XbvqjFN/background-Pro.png"></div>
+     
+      <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
